[package]
name = "git-upstream"
version = "1.6.0"
edition = "2021"
authors = ["Rebecca Turner <rbt@sent.as>"]
description = "A shortcut for `git push --set-upstream REMOTE BRANCH`"
repository = "https://github.com/9999years/git-upstream"
license = "MIT"
keywords = ["git"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "wrap_help", "env"] }
command-error = "0.4.0"
fs-err = "2.11.0"
itertools = "0.12.1"
miette = { version = "7.2.0", default-features = false, features = ["fancy-no-backtrace"] }
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-human-layer = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
utf8-command = "1.0.1"
xdg = "2.5.2"

# See: https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
[package.metadata.release]
# Don't tag commits
tag = false
# Don't do `git push`
push = false
# Don't do `cargo publish`
publish = false
